kubernetes/hotels-backend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    labels:
        name: hotels-backend
    name: hotels-backend
