kubernetes/hotels-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotels-backend
  namespace: hotels-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      name: hotels-backend
  template:
    metadata:
      labels:
        name: hotels-backend
    spec:
      containers:
      - name: hotels-backend
        image: 192.168.20.40:5000/gigiodesenvolvimento/hotels-backend:0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: 
          requests:
            memory: 128Mi
            cpu: "125m"
          limits:
            memory: 256Mi
            cpu: "250m"
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
