kubernetes/hotels-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotels-backend-service
  namespace: hotels-backend
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: hotels-backend
